--- a/MyLibraryFinally/MyLibraryFinally.csproj
+++ b/MyLibraryFinally/MyLibraryFinally.csproj
@@ -55,6 +55,7 @@
     <Compile Include="ControlProcess.cs" />
     <Compile Include="DBProcess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\ProtectVariableonPhysicalRam.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
