--- a/MyLibraryFinally/MyLibraryFinally.csproj
+++ b/MyLibraryFinally/MyLibraryFinally.csproj
@@ -56,6 +56,7 @@
     <Compile Include="DBProcess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\ProtectVariableonPhysicalRam.cs" />
+    <Compile Include="UsefulMethods.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
