--- a/MyLibraryFinally/MyLibraryFinally.csproj
+++ b/MyLibraryFinally/MyLibraryFinally.csproj
@@ -54,7 +54,9 @@
   <ItemGroup>
     <Compile Include="ControlProcess.cs" />
     <Compile Include="DBProcess.cs" />
+    <Compile Include="ErrorTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\CryptographyNoHashAlgorithm.cs" />
     <Compile Include="Security\ProtectVariableonPhysicalRam.cs" />
     <Compile Include="OtherMethods.cs" />
   </ItemGroup>
@@ -63,7 +65,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="JsLibrary\Ajax.js" />
+    <Content Include="Script\Ajax.js" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
